backup-restore/recipes/Maximo/2.10.x/README.md
# Using Maximo Fusion Recipes
Maximo application suite is deployed in multiple namespaces like `sls`, `core`, `manage` etc.. Therefore, there are recipes for each namespace. Some of these recipes can be combined together for optimization (future work) and other must be run in-sequence. Usage outlined below is per namespace basis. 

For detailed Maximo suite backup and restored procedures, have look on [documentation](https://www.ibm.com/docs/en/mas-cd/continuous-delivery?topic=administering-backing-up-restoring-maximo-application-suite).

High level description of Maximo application suite backup and restore procedure
----

## Limitations
Fusion Backup and Restore operator requieres AMQ-Streams operator for configuring Kafka cluster, if planning to configure Kafka with Maximo, it is not advised to install open source Strimzi operator as this could lead to potential issues between both operators. It is also recommended that you match the version of Fusion B/R AMQ-Streams operator to the one you are planning to use for Maximo, based on RedHat own recommendations https://access.redhat.com/solutions/7028595. 

## Backup Prerequisites
1. Some recipes relies on variables that needs to be set before apply the recipe, run the `maximo_env.sh` script to set this variables, make the necessary modifications according to your configuration. 

    `source maximo_env.sh`

2. Change directory to the application you want to configure

3. Run the prerequisite script for each application

    `./scripts/backup-pre-req.sh`

**Note:** You need to clone this repository in you local computer to use the backup-pre-req script

## Backup
1. Apply the local recipe (frcpe) generated by the backup-pre-req script

    `oc apply -f  maximo-<application>-backup-restore-local.yaml`

2. Start backup from Fusion Console

## Restore Prerequisite

1. Before restoring applications, the following Maximo Ansible roles needs to be configured: `ibm_catalogs`, `cert_manager`, `dro`. Optionally, depending on the deployment or Maximo version you might need to include `grafana` or `common-services` (newer versions for Maximo does no longer require this role). Follow [IBM Maximo Procedure](https://ibm-mas.github.io/ansible-devops) on how to run this Ansible roles. 
2. Change directory to the application you want to restore. 
3. Before restore, run the prerequisite script to add resources permissions on target cluster. This is needed for custom CR check hooks.

    `./scripts/restore-pre-req.sh`

## Restore
1. Start the restore from Fusion Console

**Note:**
1. Same pattern is followed by all namespace.
2. In each namespace directory, there is scripts folder, having different utility scripts for various purposes such as add permission, delete resources, backup resources etc. and recipes are present in yaml files having convention `*.backup-restore.yaml`.

### mongodb:
cd to maximo/2.10.x/mongdb

### db2u:
cd to maximo/2.10.x/db2u

### amq-streams:
cd to maximo/2.10.x/amq-streams

### ibm-sls:
cd to maximo/2.10.x/sls

### mas-core:
cd to maximo/2.10.x/core

### mas-manage:
cd to maximo/2.10.x/manage

### mas-iot:
cd to maximo/2.10.x/iot

### mas-monitor:
cd to maximo/2.10.x/monitor

### mas-optimizer:
cd to maximo/2.10.x/optimizer

### mas-suite:
cd to maximo/2.10.x/suite

### mas-Visual-Inspection:
cd to maximo/2.10.x/visualinspection

### mas-predict:
cd to maximo/2.10.x/predict

### mas-assist:
cd to maximo/2.10.x/assist


----

## Scenarios
Note: For detailed procedure, please review the README file on each individual application.

Note: Db2 can be made in any order but before Core/Manage. MongoDb is a prereq for SLS.So,that needs to be completed before.
Preferred B/R sequence is Db2->Suite(mongoce, ibm-sls,core)->Manage->Maximo applications 


### Maximo Suite Backup and Restore
Note: New recipe, preferred if using default MongoDB Community Edition and IBM SLS alongside Maximo Application Suite. <br>
#### Backup
1. Optional: If you have either [Db2](./db2u/README.md) instances and/or [AMQ-Streams](./amq-streams/README.md) Kafka cluster installed on cluster, follow the corresponding procedure to back up the applications where they were installed.
2. Backup [Suite](./suite/README.md) application. During the backup of this namespace, IBM Fusion recipe will also take care of protecting `mongoce` and `sls` namespaces


#### Restore
1. Install required Maximo prerequisites for Core application on target cluster: [ibm-operator-catalog](https://ibm-mas.github.io/ansible-devops/roles/ibm_catalogs/), [cert-manager](https://ibm-mas.github.io/ansible-devops/roles/cert_manager/), [dro](https://ibm-mas.github.io/ansible-devops/roles/dro/)
2. Optional: If you have either [Db2](./db2u/README.md) instances and/or [AMQ-Streams](./amq-streams/README.md) Kafka cluster installed on cluster, follow the corresponding procedure to back up the applications where they were installed.
3. Restore [Suite](./suite/README.md) application. During the restore of this namespace, IBM Fusion recipe will also take care of restoring `mongoce` and `sls` namespaces

### Maximo Core Backup and Restore
Note: If using default MongoDB Community Edition and IBM SLS alongside MAS,  **Maximo Suite Backup and Restore** scenario is preferred. <br>

#### Backup
1. Follow procedure to backup [MongoDb](./mongodb/README.md) application
2. Follow procedure to backup [SLS](./sls/README.md) application.
3. Optional: If you have either [Db2](./db2u/README.md) instances and/or [AMQ-Streams](./amq-streams/README.md) Kafka cluster installed on cluster, follow the corresponding procedure to back up the applications where they were installed.
4. Backup [Core](./core/README.md) application.


#### Restore
1. Install required Maximo prerequisites for Core application on target cluster: [ibm-operator-catalog](https://ibm-mas.github.io/ansible-devops/roles/ibm_catalogs/), [cert-manager](https://ibm-mas.github.io/ansible-devops/roles/cert_manager/), [dro](https://ibm-mas.github.io/ansible-devops/roles/dro/)
2. Follow procedure to restore [MongoDb](./mongodb/README.md) application
3. Follow procedure to restore [SLS](./sls/README.md) application. 
4. Optional: If you have either [Db2](./db2u/README.md) instances and/or [AMQ-Streams](./amq-streams/README.md) Kafka cluster installed on cluster, follow the corresponding procedure to back up the applications where they were installed.
5. Restore [Core](./core/README.md) application. 

### Maximo Manage Backup and Restore
#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Backup [Manage](./manage/README.md) application.

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Complete Manage prerequisites, including mandatory [Enabling the Openshift internal image registry](https://www.ibm.com/docs/en/masv-and-l/continuous-delivery?topic=installing-enabling-openshift-internal-image-registry) and optional dependencies. 
3. Restore [Manage](./manage/README.md) application
4. Manually perform post restore tasks in Manage [README](./manage/README.md)


### Maximo Optimizer Backup and Restore
#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Backup [Optimizer](./optimizer/README.md) application.
3. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Backup scenario

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Restore [Optimizer](./optimizer/README.md) application.
3. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Restore scenario


### Maximo Visual Inspection Backup and Restore
Note: Supported with Maximo 9.1 and higher.

#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Backup [Visual Inspection](./visualinspection/README.md) application.


#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Complete Visual Inspection prerequisites, including mandatory [nvidia_gpu](https://ibm-mas.github.io/ansible-devops/roles/nvidia_gpu/) operator and any other optional dependencies. 
3. Restore [Visual Inspection](./visualinspection/README.md) application
4. Manually perform post restore tasks in Visual Inspection [README](./visualinspection/README.md)


### Maximo Predict Backup and Restore
Note: Supported with Maximo 9.1 and higher.

#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Follow Backup scenarios for additional pre-requisite Maximo applications [Manage](./manage/README.md), [IoT](./iot/README.md), and [Monitor](./monitor/README.md).
3. Follow [Cloud Pak for Data Fusion backup](https://www.ibm.com/docs/en/cloud-paks/cp-data/5.0.x?topic=cluster-backup-restore-storage-fusion) procedure for the instance in use with Predict.
4. Backup [Predict](./predict/README.md) application.

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Complete [Predict](./predict/README.md) restore prerequisites
3. Restore [Predict](./predict/README.md) application


### Maximo IOT Backup and Restore
Note: Supported with Maximo 9.1 and higher.

#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Backup [IoT](./iot/README.md) application.
3. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Restore scenario

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Restore [IoT](./iot/README.md) application
3. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Restore scenario



### Maximo Monitor Backup and Restore
Note: Supported with Maximo 9.1 and higher.

#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Backup [IoT](./iot/README.md) application.
3. Backup [Monitor](./monitor/README.md) application.
4. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Backup scenario

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Follow [IoT](./iot/README.md) Restore scenario
3. Restore [Monitor](./monitor/README.md) application
4. Optional: If you have Manage installed follow Maximo [Manage](./manage/README.md) Restore scenario


### Maximo Assist (Collaborate) Backup and Restore
Note: Supported with Maximo 9.1 and higher.

#### Backup
1. Follow Maximo [Suite](./suite/README.md) Backup scenario or Maximo [Core](./core/README.md) Backup scenario.
2. Follow Maximo [Manage](./manage/README.md) Backup scenario
3. Backup [Assist](./assist/README.md) application.

#### Restore
1. Follow Maximo [Suite](./suite/README.md) Restore scenario or Maximo [Core](./core/README.md) Restore scenario
2. Follow Maximo [Manage](./manage/README.md) Restore scenario
3. Restore [Assist](./assist/README.md) application


----

## Fusion 2.10.x recipe enhancements
1. Added rules check to restore-pre-req.sh scripts to avoid multiple entries.
2. Added scripts and recipe for [Assist](./assist/README.md).
3. Added scripts and recipe for [IoT](./iot/README.md).
4. Added scripts and recipe for [Monitor](./monitor/README.md).
5. Added scripts and recipe for [Predict](./predict/README.md).
6. Added scripts and recipe for [Visual Inspection](./visualinspection/README.md).


## Fusion 2.9.0 recipe enhancements
1. Fusion restore no longer needs sleeping steps when restoring Maximo Custom Resources (CR) which provides and improved restore performace. 
2. Maximo recipes for SLS, Core and Manage now includes GrafanaDashboards if Grafana is installed on source cluster. 
3. New recipe [suite](./suite/) that is able to restore multiple namespaces (`mongoce`, `sls`, `core`) with single recipe. 
